Fix problems with point label plugin on line graph

--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -71,6 +71,12 @@
                                 dataLabels: 'value'
                             }
                         },
+                    [% ELSE %]
+                        seriesDefaults:{
+                            pointLabels: {
+                                show: false
+                            }
+                        },
                     [% END %]
                         [% UNLESS graph.type == "donut" OR graph.type == "pie" %]
                             series: plotData.labels,
