Remove margin and point labels on bar graphs

--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -49,11 +49,10 @@
                         seriesDefaults:{
                             renderer:$.jqplot.BarRenderer,
                             rendererOptions: {
-                                barMargin: 30,
                                 shadow: false
                             },
                             pointLabels: {
-                                show: true,
+                                show: false,
                                 hideZeros: true
                             }
                         },
