--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -148,6 +148,10 @@
                         $(this).text(moreText);
                     }
                 });
+                if (!FontDetect.isFontLoaded('14px/1 FontAwesome')) {
+                    $( ".use-icon-font" ).hide();
+                    $( ".use-icon-png" ).show();
+                }
             });
         [% END %]
     [% END %]';
