Allow whole path of node to be searched

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -1,3 +1,4 @@
+[% USE JSON.Escape %]
 <h2>
     [% IF record.current_id %]
         Record ID [% record.current_id %]
@@ -226,10 +227,13 @@
             [% ELSE %]
                 [% js_valget = '$(this).val()' %]
             [% END %]
+            [% jsonstr.value = depends.regex %]
             [% jscode.push('
                 $("#' _ col.id  _ '").change( function () {
                     var val = ' _ js_valget _ ';
-                    if (/^' _ depends.regex _ '$/.test(val)) {
+                    var regex = JSON.parse(\'' _ jsonstr.json.replace('\\\\', '\\\\\\\\') _ '\');
+                    var re = new RegExp("^" + regex.value + "$");
+                    if (re.test(val)) {
                         $("#' _ divid _ '").show()
                         } else {
                         $("#' _ divid _ '").hide()
