--- a/views/edit.tt
+++ b/views/edit.tt
@@ -243,7 +243,11 @@
 
         <div class="row">
             <div class="col-md-11 col-md-offset-1">
-                [% textval = record.fields.$cid.as_string  %]
+                [% IF col.type == "tree" %]
+                    [% textval = record.fields.$cid.full_path  %]
+                [% ELSE %]
+                    [% textval = record.fields.$cid.as_string  %]
+                [% END %]
                 [% FOREACH c IN col.depended_by %]
                     [% FOREACH cc IN all_columns %]
                         [% IF cc.id == c.id %]
