Use correct links for search results

--- a/views/search.tt
+++ b/views/search.tt
@@ -4,7 +4,7 @@
         [% FOREACH result IN results %]
             <tr>
                 <td>
-                    <a href="/record/[% result.record_id %]">[% result.current_id %]</a>
+                    <a href="/record/[% result.current_id %]">[% result.current_id %]</a>
                 </td>
                 <td>
                     [% result.results %]
