--- a/views/user.tt
+++ b/views/user.tt
@@ -240,6 +240,7 @@
                 <th>Surname</th>
                 <th>Firstname</th>
                 <th>Email</th>
+                <th>Organisation</th>
             </tr>
         </thead>
         <tbody>
@@ -249,6 +250,7 @@
                     <td>[% register_request.surname | html_entity %]</td>
                     <td>[% register_request.firstname | html_entity %]</td>
                     <td>[% register_request.email | html_entity %]</td>
+                    <td>[% register_request.organisation.name | html_entity %]</td>
                 </tr>
             [% END %]
         </tbody>
