Remove missing name when viewing account request

--- a/views/user.tt
+++ b/views/user.tt
@@ -1,6 +1,8 @@
 [% IF edit.defined %]
 [% edituser = users.shift %]
-[% IF edituser.id %]
+[% IF edituser.account_request %]
+    <h2>New account request</h2>
+[% ELSIF edituser.id %]
     <h2>User - [% edituser.value %]</h2>
 [% ELSE %]
     <h2>New user</h2>
