Add data tables to account requests

--- a/views/user.tt
+++ b/views/user.tt
@@ -241,7 +241,7 @@
 </table>
 [% IF register_requests.size %]
     <h4>Account requests</h4>
-    <table class="table table-striped">
+    <table class="table table-striped dtable">
         <thead>
             <tr>
                 <th>ID</th>
