--- a/views/aup.tt
+++ b/views/aup.tt
@@ -1,5 +1,5 @@
 <iframe width="80%" height="400px" src="/aup_text"></iframe>
 <form method="post">
-    <button type="submit" name="accepted" value="accepted" class="btn btn-primary">I accept</button>
+    <button type="submit" name="accepted" value="accepted" class="btn btn-primary">[% config.gads.aup_accept OR "I accept" %]</button>
 </form>
 
