--- a/views/user.tt
+++ b/views/user.tt
@@ -72,12 +72,27 @@
                 </select>
             </div>
             [% IF page == "user" %]
+                <label>
+                    Permissions:
+                </label>
                 [% FOREACH permission IN permissions %]
                     [% key = permission.name %]
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" name="permission" value="[% permission.id %]"
                                 [% IF edituser.permission.$key %]checked[% END %]>[% permission.description %]
+                        </label>
+                    </div>
+                [% END %]
+                <label>
+                    Groups:
+                </label>
+                [% FOREACH group IN groups %]
+                    [% key = group.id %]
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="groups" value="[% group.id %]"
+                                [% IF edituser.groups.$key %]checked[% END %]>[% group.name %]
                         </label>
                     </div>
                 [% END %]
